--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "jest": "jest",
     "watch": "jest --watch"
@@ -39,7 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.1.1",
+    "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
