--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
@@ -48,6 +50,7 @@
     "@types/jest": "^29.1.1",
     "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.1.2",
+    "gh-pages": "^4.0.0",
     "jest": "^29.1.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
